--- a/src/app.css
+++ b/src/app.css
@@ -44,7 +44,7 @@
   --brand1: var(--color-blue-500);
   --brand2: var(--color-blue-600);
   --brand3: var(--color-blue-700);
-  --fg: var(--color-gray-50);
+  --fg: var(--color-white);
   --bg1: var(--color-gray-100);
   --bg2: var(--color-gray-200);
   --bg3: var(--color-gray-300);
