--- a/src/app.css
+++ b/src/app.css
@@ -208,63 +208,63 @@ button {
 /* Buttons */
 /* ============================================================== */
 .brand-solid-button {
-  @apply bg-[var(--brand1)] text-[var(--text-invariant-white)] font-bold py-2 px-4 rounded transition-colors duration-100 cursor-pointer gap-2 flex items-center shadow;
+  @apply bg-[var(--brand1)] text-[var(--text-invariant-white)] py-2 px-4 rounded transition-colors duration-100 cursor-pointer gap-2 flex items-center shadow;
   @apply hover:bg-[var(--brand2)];
   @apply active:bg-[var(--brand3)];
   @apply disabled:opacity-70 disabled:cursor-default disabled:hover:bg-[var(--brand1)] disabled:active:bg-[var(--brand1)];
 }
 
 .brand-outline-button {
-  @apply border border-[var(--brand1)] bg-transparent text-[var(--brand1)] font-bold py-2 px-4 rounded transition-colors duration-100 cursor-pointer gap-2 flex items-center;
+  @apply border border-[var(--brand1)] bg-transparent text-[var(--brand1)]  py-2 px-4 rounded transition-colors duration-100 cursor-pointer gap-2 flex items-center;
   @apply hover:border-[var(--brand2)] hover:text-[var(--brand2)] hover:bg-[var(--bg1)];
   @apply active:border-[var(--brand3)] active:text-[var(--brand3)] active:bg-[var(--bg2)];
   @apply disabled:opacity-70 disabled:cursor-default disabled:hover:border-[var(--brand1)] disabled:active:border-[var(--brand1)] disabled:hover:text-[var(--brand1)] disabled:active:text-[var(--brand1)] disabled:hover:bg-transparent disabled:active:bg-transparent;
 }
 
 .brand-transparent-button {
-  @apply bg-transparent text-[var(--brand1)] font-bold py-2 px-4 rounded transition-colors duration-100 cursor-pointer gap-2 flex items-center;
+  @apply bg-transparent text-[var(--brand1)]  py-2 px-4 rounded transition-colors duration-100 cursor-pointer gap-2 flex items-center;
   @apply hover:bg-[var(--bg1)] hover:text-[var(--brand2)] hover:border-[var(--brand2)];
   @apply active:bg-[var(--bg2)] active:text-[var(--brand3)] active:border-[var(--brand3)];
   @apply disabled:opacity-70 disabled:cursor-default disabled:hover:bg-transparent disabled:active:bg-transparent disabled:hover:text-[var(--brand1)] disabled:active:text-[var(--brand1)];
 }
 
 .neutral-solid-button {
-  @apply bg-[var(--bg1)] text-[var(--text1)] font-bold py-2 px-4 rounded transition-colors duration-100 cursor-pointer gap-2 flex items-center;
+  @apply bg-[var(--bg1)] text-[var(--text1)]  py-2 px-4 rounded transition-colors duration-100 cursor-pointer gap-2 flex items-center;
   @apply hover:bg-[var(--bg2)] hover:text-[var(--text2)] hover:border-[var(--border2)];
   @apply active:bg-[var(--bg3)] active:text-[var(--text3)] active:border-[var(--border3)];
   @apply disabled:opacity-70 disabled:text-[var(--text3)] disabled:cursor-default disabled:hover:bg-[var(--bg1)] disabled:active:bg-[var(--bg1)] disabled:hover:text-[var(--text3)] disabled:active:text-[var(--text3)];
 }
 
 .neutral-outline-button {
-  @apply border border-[var(--border1)] bg-transparent text-[var(--text1)] font-bold py-2 px-4 rounded transition-colors duration-100 cursor-pointer gap-2 flex items-center;
+  @apply border border-[var(--border1)] bg-transparent text-[var(--text1)]  py-2 px-4 rounded transition-colors duration-100 cursor-pointer gap-2 flex items-center;
   @apply hover:border-[var(--border2)] hover:text-[var(--text2)] hover:bg-[var(--bg1)];
   @apply active:border-[var(--border3)] active:text-[var(--text3)] active:bg-[var(--bg2)];
   @apply disabled:opacity-70 disabled:text-[var(--text3)] disabled:cursor-default disabled:hover:border-[var(--border1)] disabled:active:border-[var(--border1)] disabled:hover:text-[var(--text3)] disabled:active:text-[var(--text3)] disabled:hover:bg-transparent disabled:active:bg-transparent;
 }
 
 .neutral-transparent-button {
-  @apply bg-transparent text-[var(--text1)] font-bold py-2 px-4 rounded transition-colors duration-100 cursor-pointer gap-2 flex items-center;
+  @apply bg-transparent text-[var(--text1)] py-2 px-4 rounded transition-colors duration-100 cursor-pointer gap-2 flex items-center;
   @apply hover:bg-[var(--bg1)] hover:text-[var(--text2)] hover:border-[var(--border2)];
   @apply active:bg-[var(--bg2)] active:text-[var(--text3)] active:border-[var(--border3)];
   @apply disabled:opacity-70 disabled:text-[var(--text3)] disabled:cursor-default disabled:hover:bg-transparent disabled:active:bg-transparent disabled:hover:text-[var(--text3)] disabled:active:text-[var(--text3)];
 }
 
 .status-danger-solid-button {
-  @apply bg-[var(--status-danger1)] text-[var(--text-invariant-white)] font-bold py-2 px-4 rounded transition-colors duration-100 cursor-pointer gap-2 flex items-center;
+  @apply bg-[var(--status-danger1)] text-[var(--text-invariant-white)]  py-2 px-4 rounded transition-colors duration-100 cursor-pointer gap-2 flex items-center;
   @apply hover:bg-[var(--status-danger2)] hover:text-[var(--text-invariant-white)] hover:border-[var(--border2)];
   @apply active:bg-[var(--status-danger3)] active:text-[var(--text-invariant-white)] active:border-[var(--border3)];
   @apply disabled:opacity-70 disabled:text-[var(--text-invariant-white)] disabled:cursor-default disabled:hover:bg-[var(--status-danger1)] disabled:active:bg-[var(--status-danger1)];
 }
 
 .status-danger-outline-button {
-  @apply border border-[var(--status-danger1)] bg-transparent text-[var(--status-danger1)] font-bold py-2 px-4 rounded transition-colors duration-100 cursor-pointer gap-2 flex items-center;
+  @apply border border-[var(--status-danger1)] bg-transparent text-[var(--status-danger1)]  py-2 px-4 rounded transition-colors duration-100 cursor-pointer gap-2 flex items-center;
   @apply hover:border-[var(--status-danger2)] hover:text-[var(--status-danger2)] hover:bg-[var(--bg1)];
   @apply active:border-[var(--status-danger3)] active:text-[var(--status-danger3)] active:bg-[var(--bg2)];
   @apply disabled:opacity-70 disabled:text-[var(--status-danger1)] disabled:cursor-default disabled:hover:border-[var(--status-danger1)] disabled:active:border-[var(--status-danger1)] disabled:hover:text-[var(--status-danger1)] disabled:active:text-[var(--status-danger1)] disabled:hover:bg-transparent disabled:active:bg-transparent;
 }
 
 .status-danger-transparent-button {
-  @apply bg-transparent text-[var(--status-danger1)] font-bold py-2 px-4 rounded transition-colors duration-100 cursor-pointer gap-2 flex items-center;
+  @apply bg-transparent text-[var(--status-danger1)]  py-2 px-4 rounded transition-colors duration-100 cursor-pointer gap-2 flex items-center;
   @apply hover:bg-[var(--bg1)] hover:text-[var(--status-danger2)] hover:border-[var(--border2)];
   @apply active:bg-[var(--bg2)] active:text-[var(--status-danger3)] active:border-[var(--border3)];
   @apply disabled:opacity-70 disabled:cursor-default disabled:hover:bg-transparent disabled:active:bg-transparent disabled:hover:text-[var(--status-danger1)] disabled:active:text-[var(--status-danger1)];
